// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Many2One for Resource.Form snapshot: RO 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <a>
      <span>
        Go to =&gt; Entry
      </span>
    </a>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2One for Resource.Form snapshot: RO and slot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <a>
      <div>
        Entry
      </div>
    </a>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2One for Resource.Form snapshot: RW 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="autocomplete control"
    >
      <div
        class="control is-clearfix"
      >
        <input
          autocomplete="off"
          class="input"
          type="text"
        />
         
        <!---->
         
        <!---->
         
        <!---->
      </div>
       
      <div
        class="dropdown-menu"
        style="display: none;"
      >
        <div
          class="dropdown-content"
          style="max-height: 200px; display: none;"
        >
          <!---->
            
          <div
            class="dropdown-item is-disabled"
          >
            <span
              class="has-text-grey"
            >
              No data found with current filter.
            </span>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2One for Resource.List Empty snapshot 1`] = `
<div>
  <a>
    
  </a>
</div>
`;

exports[`Field.Many2One for Resource.List Empty snapshot and slot 1`] = `
<div>
  <a>
    <div>
      
    </div>
  </a>
</div>
`;

exports[`Field.Many2One for Resource.List Hidden 1`] = `
<div>
  <span />
</div>
`;

exports[`Field.Many2One for Resource.List With value and slot: snapshot 1`] = `
<div>
  <a>
    <div>
      Entry
    </div>
  </a>
</div>
`;

exports[`Field.Many2One for Resource.List With value: snapshot 1`] = `
<div>
  <a>
    Go to =&gt; Entry
  </a>
</div>
`;

exports[`Field.Many2One for Resource.Thumbnail Empty snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <a>
      
    </a>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2One for Resource.Thumbnail Empty snapshot 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <a>
      
    </a>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2One for Resource.Thumbnail Empty snapshot and slot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <a>
      <div>
        
      </div>
    </a>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2One for Resource.Thumbnail Hidden 1`] = `<div />`;

exports[`Field.Many2One for Resource.Thumbnail Hidden 2`] = `<div />`;

exports[`Field.Many2One for Resource.Thumbnail With value and slot: snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <a>
      <div>
        Entry
      </div>
    </a>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2One for Resource.Thumbnail With value: snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <a>
      Go to =&gt; Entry
    </a>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2One for Resource.Thumbnail With value: snapshot 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <a>
      Go to =&gt; Entry
    </a>
     
    <!---->
  </div>
</span>
`;
